# DistibutedSystems

./: .gitignore  README.md
lab1/: chanel.c  ipc_message.h  process_pub.h
lab2/: CMakeLists.txt  bank_client.c  bank_server.c  bank_server.h  chanel.h  ipc.c  ipc_message.c  main.c  pa23.c  process.c  process.h  process_pub.h
pa1/: CMakeLists.txt  CMakePresets.json  chanel.h  ipc_message.c  main.c  pa1.h  process.h
pa1/lab1/: process.c
pa2/: .gitignore  bank_client.c  bank_server.c  bank_server.h  chanel.c  ipc.c  ipc_message.c  ipc_message.h  process.c
pa3/: CMakeLists.txt  bank_client.c  bank_server.c  bank_server.h  ipc_message.c  main.c  process.c  process.h  process_pub.h
pa4/: CMakeLists.txt  critical_sections.c  critical_sections.h  ipc.c  ipc_message.c  ipc_message.h  lamport_time.c  lamport_time.h  main.c  process.c  process.h  process_pub.h
pa5/: .clang-format  CMakeLists.txt  Dockerfile  critical_sections.c  lamport_time.c  process.h
